Делал страницу товара

--- a/parts/page-bg.html
+++ b/parts/page-bg.html
@@ -9,4 +9,19 @@
             <path>
         </svg>
     </div>
+    <div class="page__stain page__stain--3 stain">
+        <svg class="stain__icon" viewBox="0 0 866 885">
+            <path>
+        </svg>
+    </div>
+    <div class="page__stain page__stain--4 stain">
+        <svg class="stain__icon" viewBox="0 0 866 885">
+            <path>
+        </svg>
+    </div>
+    <div class="page__stain page__stain--5 stain">
+        <svg class="stain__icon" viewBox="0 0 866 885">
+            <path>
+        </svg>
+    </div>
 </div>
