--- a/product.html
+++ b/product.html
@@ -149,70 +149,113 @@
     </div>
     <div class="page__content">
         <div class="container">
-            <h1 class="contacts__title page-title">Услуги</h1>
-            <div class="services-section__grid dark-text">
-<!-- start services.html-->
-<a href="/" class="service-block">
-    <span class="service-block__top">
-        <img src="./static/images/service1.svg" alt="" class="service-block__icon">
-    </span>
-    <span class="service-block__overlay">
-        <img src="./static/images/service-pic1.jpg" alt="" class="service-block__img">
-    </span>
-    <span class="service-block__title">Лазерная резка ЧПУ</span>
-    <img src="./static/images/service1.svg" alt="" class="service-block__bg">
-</a>
-<a href="/" class="service-block">
-    <span class="service-block__top">
-        <img src="./static/images/service2.svg" alt="" class="service-block__icon">
-    </span>
-    <span class="service-block__overlay">
-        <img src="./static/images/service-pic2.jpg" alt="" class="service-block__img">
-    </span>
-    <span class="service-block__title">Сварочные работы</span>
-    <img src="./static/images/service2.svg" alt="" class="service-block__bg">
-</a>
-<a href="/" class="service-block">
-    <span class="service-block__top">
-        <img src="./static/images/service3.svg" alt="" class="service-block__icon">
-    </span>
-    <span class="service-block__overlay">
-        <img src="./static/images/service-pic3.jpg" alt="" class="service-block__img">
-    </span>
-    <span class="service-block__title">Лазерная сварка</span>
-    <img src="./static/images/service3.svg" alt="" class="service-block__bg">
-</a>
-<a href="/" class="service-block">
-    <span class="service-block__top">
-        <img src="./static/images/service4.svg" alt="" class="service-block__icon">
-    </span>
-    <span class="service-block__overlay">
-        <img src="./static/images/service-pic4.jpg" alt="" class="service-block__img">
-    </span>
-    <span class="service-block__title">Гибка листового металла ЧПУ</span>
-    <img src="./static/images/service4.svg" alt="" class="service-block__bg">
-</a>
-<a href="/" class="service-block">
-    <span class="service-block__top">
-        <img src="./static/images/service5.svg" alt="" class="service-block__icon">
-    </span>
-    <span class="service-block__overlay">
-        <img src="./static/images/service-pic5.jpg" alt="" class="service-block__img">
-    </span>
-    <span class="service-block__title">Токарно-фрезерные работы</span>
-    <img src="./static/images/service5.svg" alt="" class="service-block__bg">
-</a>
-<a href="/" class="service-block">
-    <span class="service-block__top">
-        <img src="./static/images/service6.svg" alt="" class="service-block__icon">
-    </span>
-    <span class="service-block__overlay">
-        <img src="./static/images/service-pic6.jpg" alt="" class="service-block__img">
-    </span>
-    <span class="service-block__title">Линия порошковой покраски</span>
-    <img src="./static/images/service6.svg" alt="" class="service-block__bg">
-</a>
-<!-- end services.html-->
+            <h1 class="product-title page-title">Декоративные элементы для лестниц, заборов, перегородок и др.</h1>
+            <div class="product-grid">
+                <div class="product-slider" id="product-slider">
+                    <div class="thumbs-slider">
+                        <div class="thumbs-slider__arrow prev">
+                            <svg viewBox="0 0 9 5">
+                                <use href="./static/images/sprite.svg#arr"></use>
+                            </svg>
+                        </div>
+                        <div class="thumbs-slider__swiper swiper">
+                            <div class="swiper-wrapper">
+                                <div class="thumbs-slider__slide swiper-slide">
+                                    <img class="thumbs-slider__img" src="./static/images/slider-img.jpg" alt="">
+                                </div>
+                                <div class="thumbs-slider__slide swiper-slide">
+                                    <img class="thumbs-slider__img" src="./static/images/slider-img.jpg" alt="">
+                                </div>
+                                <div class="thumbs-slider__slide swiper-slide">
+                                    <img class="thumbs-slider__img" src="./static/images/slider-img.jpg" alt="">
+                                </div>
+                                <div class="thumbs-slider__slide swiper-slide">
+                                    <img class="thumbs-slider__img" src="./static/images/slider-img.jpg" alt="">
+                                </div>
+                                <div class="thumbs-slider__slide swiper-slide">
+                                    <img class="thumbs-slider__img" src="./static/images/slider-img.jpg" alt="">
+                                </div>
+                                <div class="thumbs-slider__slide swiper-slide">
+                                    <img class="thumbs-slider__img" src="./static/images/slider-img.jpg" alt="">
+                                </div>
+                                <div class="thumbs-slider__slide swiper-slide">
+                                    <img class="thumbs-slider__img" src="./static/images/slider-img.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="thumbs-slider__arrow next">
+                            <svg viewBox="0 0 9 5">
+                                <use href="./static/images/sprite.svg#arr"></use>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="product-main-slider">
+                        <div class="product-main-slider__swiper swiper">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <img src="./static/images/slider-img.jpg" alt="" class="product-main-slider__img">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="./static/images/slider-img.jpg" alt="" class="product-main-slider__img">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="./static/images/slider-img.jpg" alt="" class="product-main-slider__img">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="./static/images/slider-img.jpg" alt="" class="product-main-slider__img">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="./static/images/slider-img.jpg" alt="" class="product-main-slider__img">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="./static/images/slider-img.jpg" alt="" class="product-main-slider__img">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product__info-col">
+                    <p class="product__articul">Артикул: 23821382138</p>
+                    <div class="product__availability product__availability--available">
+                        В наличии
+                    </div>
+                    <p class="product__short-desc">Динамично развивающаяся компания, раскройка разных видов металла, лазерная резка. Мы предоставляем различные услуги сварки.</p>
+                    <div class="product__price-row">
+                        <p class="product__price">48 250 ₽</p>
+                        <div class="product__btn btn btn--main btn--inline btn--pad60" data-micromodal-trigger="modal-order">Заказать</div>
+                    </div>
+                </div>
+                <div class="product__tabs-col">
+                    <div class="tabs-head" id="product-tabs">
+                        <div data-tab-target="tab1" class="tab-link active">Описание</div>
+                        <div data-tab-target="tab2" class="tab-link">Характеристики</div>
+                        <div data-tab-line class="tab-line"></div>
+                    </div>
+                    <div class="product__tab active product__description tab" id="tab1">
+                        <p>Динамично развивающаяся компания, раскройка разных видов металла, лазерная резка. Мы предоставляем различные услуги сварки.</p>
+                        <p>Наши специалисты обслуживают иностранные и отечественные транспортные средства. Мы предоставляем услуги сертифицированного ремонта. У нас вы можете отремонтировать автомобиль бизнес и эконом класса любой марки на одинаково высоком уровне.</p>
+                    </div>
+                    <div class="product__tab product__specs-tab tab" id="tab2">
+                        <div class="product-specs">
+                            <div class="product-specs__row">
+                                <p class="product-specs__spec">Параметр 1</p>
+                                <p class="product-specs__value">Значение 1</p>
+                            </div>
+                            <div class="product-specs__row">
+                                <p class="product-specs__spec">Параметр 1</p>
+                                <p class="product-specs__value">Значение 1</p>
+                            </div>
+                            <div class="product-specs__row">
+                                <p class="product-specs__spec">Параметр 1</p>
+                                <p class="product-specs__value">Значение 1</p>
+                            </div>
+                            <div class="product-specs__row">
+                                <p class="product-specs__spec">Параметр 1</p>
+                                <p class="product-specs__value">Значение 1</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
