--- a/catalog-category.html
+++ b/catalog-category.html
@@ -110,6 +110,21 @@
             <path>
         </svg>
     </div>
+    <div class="page__stain page__stain--3 stain">
+        <svg class="stain__icon" viewBox="0 0 866 885">
+            <path>
+        </svg>
+    </div>
+    <div class="page__stain page__stain--4 stain">
+        <svg class="stain__icon" viewBox="0 0 866 885">
+            <path>
+        </svg>
+    </div>
+    <div class="page__stain page__stain--5 stain">
+        <svg class="stain__icon" viewBox="0 0 866 885">
+            <path>
+        </svg>
+    </div>
 </div>
 <!-- end page-bg.html-->
     <div class="container">
@@ -228,7 +243,7 @@
             </div>
             <div class="products-page-grid products-grid">
 <!-- start product-card.html-->
-<a href="/" class="product-card">
+<a href="./product.html" class="product-card">
     <span class="product-card__top">
         <img src="./static/images/product1.jpg" alt="" class="product-card__img">
     </span>
@@ -243,7 +258,7 @@
 </a>
 <!-- end product-card.html-->
 <!-- start product-card.html-->
-<a href="/" class="product-card">
+<a href="./product.html" class="product-card">
     <span class="product-card__top">
         <img src="./static/images/product2.jpg" alt="" class="product-card__img">
     </span>
@@ -258,7 +273,7 @@
 </a>
 <!-- end product-card.html-->
 <!-- start product-card.html-->
-<a href="/" class="product-card">
+<a href="./product.html" class="product-card">
     <span class="product-card__top">
         <img src="./static/images/product3.jpg" alt="" class="product-card__img">
     </span>
@@ -273,7 +288,7 @@
 </a>
 <!-- end product-card.html-->
 <!-- start product-card.html-->
-<a href="/" class="product-card">
+<a href="./product.html" class="product-card">
     <span class="product-card__top">
         <img src="./static/images/product4.jpg" alt="" class="product-card__img">
     </span>
@@ -288,7 +303,7 @@
 </a>
 <!-- end product-card.html-->
 <!-- start product-card.html-->
-<a href="/" class="product-card">
+<a href="./product.html" class="product-card">
     <span class="product-card__top">
         <img src="./static/images/product1.jpg" alt="" class="product-card__img">
     </span>
@@ -303,7 +318,7 @@
 </a>
 <!-- end product-card.html-->
 <!-- start product-card.html-->
-<a href="/" class="product-card">
+<a href="./product.html" class="product-card">
     <span class="product-card__top">
         <img src="./static/images/product2.jpg" alt="" class="product-card__img">
     </span>
@@ -318,7 +333,7 @@
 </a>
 <!-- end product-card.html-->
 <!-- start product-card.html-->
-<a href="/" class="product-card">
+<a href="./product.html" class="product-card">
     <span class="product-card__top">
         <img src="./static/images/product3.jpg" alt="" class="product-card__img">
     </span>
@@ -333,7 +348,7 @@
 </a>
 <!-- end product-card.html-->
 <!-- start product-card.html-->
-<a href="/" class="product-card">
+<a href="./product.html" class="product-card">
     <span class="product-card__top">
         <img src="./static/images/product4.jpg" alt="" class="product-card__img">
     </span>
