--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     </div>
                     <div class="catalog-section__grid products-grid">
 <!-- start product-card.html-->
-<a href="/" class="product-card">
+<a href="./product.html" class="product-card">
     <span class="product-card__top">
         <img src="./static/images/product1.jpg" alt="" class="product-card__img">
     </span>
@@ -251,7 +251,7 @@
 </a>
 <!-- end product-card.html-->
 <!-- start product-card.html-->
-<a href="/" class="product-card">
+<a href="./product.html" class="product-card">
     <span class="product-card__top">
         <img src="./static/images/product2.jpg" alt="" class="product-card__img">
     </span>
@@ -266,7 +266,7 @@
 </a>
 <!-- end product-card.html-->
 <!-- start product-card.html-->
-<a href="/" class="product-card">
+<a href="./product.html" class="product-card">
     <span class="product-card__top">
         <img src="./static/images/product3.jpg" alt="" class="product-card__img">
     </span>
@@ -281,7 +281,7 @@
 </a>
 <!-- end product-card.html-->
 <!-- start product-card.html-->
-<a href="/" class="product-card">
+<a href="./product.html" class="product-card">
     <span class="product-card__top">
         <img src="./static/images/product4.jpg" alt="" class="product-card__img">
     </span>
