--- a/src/html/parts/product-card.html
+++ b/src/html/parts/product-card.html
@@ -1,4 +1,4 @@
-<a href="/" class="product-card">
+<a href="./product.html" class="product-card">
     <span class="product-card__top">
         <img src="{ img }" alt="" class="product-card__img">
     </span>
