--- a/text-page.html
+++ b/text-page.html
@@ -110,6 +110,21 @@
             <path>
         </svg>
     </div>
+    <div class="page__stain page__stain--3 stain">
+        <svg class="stain__icon" viewBox="0 0 866 885">
+            <path>
+        </svg>
+    </div>
+    <div class="page__stain page__stain--4 stain">
+        <svg class="stain__icon" viewBox="0 0 866 885">
+            <path>
+        </svg>
+    </div>
+    <div class="page__stain page__stain--5 stain">
+        <svg class="stain__icon" viewBox="0 0 866 885">
+            <path>
+        </svg>
+    </div>
 </div>
 <!-- end page-bg.html-->
     <div class="container">
