--- a/src/html/product.html
+++ b/src/html/product.html
@@ -18,25 +18,49 @@
                         <div class="thumbs-slider__swiper swiper">
                             <div class="swiper-wrapper">
                                 <div class="thumbs-slider__slide swiper-slide">
-                                    <img class="thumbs-slider__img" src="./static/images/slider-img.jpg" alt="">
+                                    <div class="thumbs-slider__img-wrap">
+                                        <img class="thumbs-slider__img" src="./static/images/slider-img.jpg" alt="">
+                                    </div>
                                 </div>
                                 <div class="thumbs-slider__slide swiper-slide">
-                                    <img class="thumbs-slider__img" src="./static/images/slider-img.jpg" alt="">
+                                    <div class="thumbs-slider__img-wrap">
+                                        <img class="thumbs-slider__img" src="./static/images/form-section-img.jpg" alt="">
+                                    </div>
                                 </div>
                                 <div class="thumbs-slider__slide swiper-slide">
-                                    <img class="thumbs-slider__img" src="./static/images/slider-img.jpg" alt="">
+                                    <div class="thumbs-slider__img-wrap">
+                                        <img class="thumbs-slider__img" src="./static/images/hand-img.jpg" alt="">
+                                    </div>
                                 </div>
                                 <div class="thumbs-slider__slide swiper-slide">
-                                    <img class="thumbs-slider__img" src="./static/images/slider-img.jpg" alt="">
+                                    <div class="thumbs-slider__img-wrap">
+                                        <img class="thumbs-slider__img" src="./static/images/main-pic.png" alt="">
+                                    </div>
                                 </div>
                                 <div class="thumbs-slider__slide swiper-slide">
-                                    <img class="thumbs-slider__img" src="./static/images/slider-img.jpg" alt="">
+                                    <div class="thumbs-slider__img-wrap">
+                                        <img class="thumbs-slider__img" src="./static/images/imgs-group.png" alt="">
+                                    </div>
                                 </div>
                                 <div class="thumbs-slider__slide swiper-slide">
-                                    <img class="thumbs-slider__img" src="./static/images/slider-img.jpg" alt="">
+                                    <div class="thumbs-slider__img-wrap">
+                                        <img class="thumbs-slider__img" src="./static/images/imgs-group.png" alt="">
+                                    </div>
                                 </div>
                                 <div class="thumbs-slider__slide swiper-slide">
-                                    <img class="thumbs-slider__img" src="./static/images/slider-img.jpg" alt="">
+                                    <div class="thumbs-slider__img-wrap">
+                                        <img class="thumbs-slider__img" src="./static/images/service-pic1.jpg" alt="">
+                                    </div>
+                                </div>
+                                <div class="thumbs-slider__slide swiper-slide">
+                                    <div class="thumbs-slider__img-wrap">
+                                        <img class="thumbs-slider__img" src="./static/images/service-pic2.jpg" alt="">
+                                    </div>
+                                </div>
+                                <div class="thumbs-slider__slide swiper-slide">
+                                    <div class="thumbs-slider__img-wrap">
+                                        <img class="thumbs-slider__img" src="./static/images/service-pic3.jpg" alt="">
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -48,27 +72,47 @@
                     </div>
                     <div class="product-main-slider">
                         <div class="product-main-slider__swiper swiper">
+                            <div class="product-main-slider__arrow prev">
+                                <svg viewBox="0 0 9 5">
+                                    <use href="./static/images/sprite.svg#arr"></use>
+                                </svg>
+                            </div>
+                            <div class="product-main-slider__arrow next">
+                                <svg viewBox="0 0 9 5">
+                                    <use href="./static/images/sprite.svg#arr"></use>
+                                </svg>
+                            </div>
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <img src="./static/images/slider-img.jpg" alt="" class="product-main-slider__img">
+                                    <img class="product-main-slider__img" src="./static/images/slider-img.jpg" alt="">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="./static/images/slider-img.jpg" alt="" class="product-main-slider__img">
+                                    <img class="product-main-slider__img" src="./static/images/form-section-img.jpg" alt="">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="./static/images/slider-img.jpg" alt="" class="product-main-slider__img">
+                                    <img class="product-main-slider__img" src="./static/images/hand-img.jpg" alt="">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="./static/images/slider-img.jpg" alt="" class="product-main-slider__img">
+                                    <img class="product-main-slider__img" src="./static/images/main-pic.png" alt="">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="./static/images/slider-img.jpg" alt="" class="product-main-slider__img">
+                                    <img class="product-main-slider__img" src="./static/images/imgs-group.png" alt="">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="./static/images/slider-img.jpg" alt="" class="product-main-slider__img">
+                                    <img class="product-main-slider__img" src="./static/images/imgs-group.png" alt="">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img class="product-main-slider__img" src="./static/images/service-pic1.jpg" alt="">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img class="product-main-slider__img" src="./static/images/service-pic2.jpg" alt="">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img class="product-main-slider__img" src="./static/images/service-pic3.jpg" alt="">
                                 </div>
                             </div>
                         </div>
+                        <div class="product-main-slider__pagination slider-pagination"></div>
                     </div>
                 </div>
                 <div class="product__info-col">
@@ -114,6 +158,61 @@
                     </div>
                 </div>
             </div>
+            <section class="product__viewed">
+                <h2 class="product__viewed-title">Недавно просмотренные</h2>
+                <div class="cards-slider" id="viewed-slider">
+                    <div class="cards-slider__arrow prev">
+                        <svg viewBox="0 0 9 5">
+                            <use href="./static/images/sprite.svg#arr"></use>
+                        </svg>
+                    </div>
+                    <div class="cards-slider__arrow next">
+                        <svg viewBox="0 0 9 5">
+                            <use href="./static/images/sprite.svg#arr"></use>
+                        </svg>
+                    </div>
+                    <div class="cards-slider__swiper swiper cards-slider__swiper">
+                        <div class="swiper-wrapper">
+                            <div class="cards-slider__slide swiper-slide">
+                                @include ./parts/product-card.html {"img" : "./static/images/product1.jpg", "name" : "Панно «Кони в горах»", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+                            </div>
+                            <div class="cards-slider__slide swiper-slide">
+                                @include ./parts/product-card.html {"img" : "./static/images/product2.jpg", "name" : "Цветочница", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+                            </div>
+                            <div class="cards-slider__slide swiper-slide">
+                                @include ./parts/product-card.html {"img" : "./static/images/product3.jpg", "name" : "Декоративные элементы для лестниц, заборов, перегородок и др.", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+                            </div>
+                            <div class="cards-slider__slide swiper-slide">
+                                @include ./parts/product-card.html {"img" : "./static/images/product4.jpg", "name" : "Очаг для костра «Лес»", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+                            </div>
+                            <div class="cards-slider__slide swiper-slide">
+                                @include ./parts/product-card.html {"img" : "./static/images/product1.jpg", "name" : "Панно «Кони в горах»", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+                            </div>
+                            <div class="cards-slider__slide swiper-slide">
+                                @include ./parts/product-card.html {"img" : "./static/images/product2.jpg", "name" : "Цветочница", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+                            </div>
+                            <div class="cards-slider__slide swiper-slide">
+                                @include ./parts/product-card.html {"img" : "./static/images/product3.jpg", "name" : "Декоративные элементы для лестниц, заборов, перегородок и др.", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+                            </div>
+                            <div class="cards-slider__slide swiper-slide">
+                                @include ./parts/product-card.html {"img" : "./static/images/product4.jpg", "name" : "Очаг для костра «Лес»", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+                            </div>
+                            <div class="cards-slider__slide swiper-slide">
+                                @include ./parts/product-card.html {"img" : "./static/images/product1.jpg", "name" : "Панно «Кони в горах»", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+                            </div>
+                            <div class="cards-slider__slide swiper-slide">
+                                @include ./parts/product-card.html {"img" : "./static/images/product2.jpg", "name" : "Цветочница", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+                            </div>
+                            <div class="cards-slider__slide swiper-slide">
+                                @include ./parts/product-card.html {"img" : "./static/images/product3.jpg", "name" : "Декоративные элементы для лестниц, заборов, перегородок и др.", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+                            </div>
+                            <div class="cards-slider__slide swiper-slide">
+                                @include ./parts/product-card.html {"img" : "./static/images/product4.jpg", "name" : "Очаг для костра «Лес»", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </div>
 </div>
