Cверстал страницу поиска, поиск в шапке, много правок

--- a/src/html/parts/header.html
+++ b/src/html/parts/header.html
@@ -43,6 +43,23 @@
                         <div class="form-elem">
                             <input id="header-search" name="search" type="text" class="form-text-input" placeholder="Поиск">
                         </div>
+                        <div class="header__search-links">
+                            <a href="/" class="search__link">
+                                <span class="search__link-text"><b>Шкафы</b> металлические</span>
+                            </a>
+                            <a href="/" class="search__link search__link--sub">
+                                <span class="search__link-text"><b>Шкафы</b> металлические</span>
+                            </a>
+                            <a href="/" class="search__link search__link--sub">
+                                <span class="search__link-text"><b>Шкафы</b> металлические</span>
+                            </a>
+                            <a href="/" class="search__link search__link--sub">
+                                <span class="search__link-text"><b>Шкафы</b> металлические</span>
+                            </a>
+                            <a href="/search.html" class="header__search-show-all search__link search__link--sub">
+                                <span class="search__link-text">Показать все результаты</span>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <a href="/" class="header__cart header__action">
