--- a/search.html
+++ b/search.html
@@ -166,99 +166,36 @@
     </div>
     <div class="page__content">
         <div class="container">
-            <h1 class="catalog-category__title page-title">Каталог</h1>
-            <div class="catalog-search-wrap">
-                <div class="form-elem catalog-search">
-                    <input name="search" type="text" class="form-text-input" placeholder="Поиск">
-                    <p class="form-input-placeholder">Поиск</p>
-                    <svg viewBox="0 0 22 22">
-                        <use href='./static/images/sprite.svg#search'/>
-                    </svg>
-                </div>
+            <h1 class="search__title page-title">По запросу <span>шкаф</span> найдено 14 результатов</h1>
+            <div class="search__filter">
+                <a href="" class="search__category active">
+                    <div class="search__category-amount">14</div>
+                    Все
+                </a>
+                <a href="" class="search__category">
+                    <div class="search__category-amount">8</div>
+                    Товары
+                </a>
+                <a href="" class="search__category">
+                    <div class="search__category-amount">6</div>
+                    Другое
+                </a>
             </div>
-            <div class="category-filter">
-                <a href="/" class="active">Шкафы бухгалтерские</a>
-                <a href="/" class="">Шкафы бухгалтерские</a>
-                <a href="/" class="">Шкафы для одежды</a>
-                <a href="/" class="">Шкафы картотечные</a>
-                <a href="/" class="">Шкафы медицинские</a>
-                <a href="/" class="">Шкафы пожарные</a>
-                <a href="/" class="">Шкафы картотечные</a>
-                <a href="/" class="">Прочее</a>
+            <div class="search__categories">
+                <a href="/" class="search__link">
+                    <span class="search__link-text"><b>Шкафы</b> металлические</span>
+                </a>
+                <a href="/" class="search__link search__link--sub">
+                    <span class="search__link-text"><b>Шкафы</b> металлические</span>
+                </a>
+                <a href="/" class="search__link search__link--sub">
+                    <span class="search__link-text"><b>Шкафы</b> металлические</span>
+                </a>
+                <a href="/" class="search__link search__link--sub">
+                    <span class="search__link-text"><b>Шкафы</b> металлические</span>
+                </a>
             </div>
-            <div class="products-filter">
-                <div class="products-filter__head opened" data-collapse-target="#filters">
-                    Фильтр
-                    <svg viewBox="0 0 9 5">
-                        <use href='./static/images/sprite.svg#arr'/>
-                    </svg>
-                </div>
-                <form action="" class="products-filter__bottom collapse" id="filters">
-                    <input type="text" class="hidden" id="order-by" name="order_by" value="popularity">
-                    <input type="text" class="hidden" id="order" name="order" value="DESC">
-                    <div class="products-filter__filters">
-                        <div class="products-filter__ranges">
-                            <div class="range-input" id="price-range">
-                                <div class="range-input__name">Цена от</div>
-                                <input data-from-input type="number" class="range-input__input" value="0" min="0" >
-                                <div class="range-input__delimeter"></div>
-                                <div class="range-input__to">до</div>
-                                <input data-to-input type="number" class="range-input__input" value="4500" min="0">
-                                <div class="range-input__unit">₽</div>
-                                <div data-js-range class="range-input__range range-slider" data-current-min="2090" data-current-max="6000" data-from="0" data-to="10000"></div>
-                            </div>
-                            <div class="range-input">
-                                <div class="range-input__name">Ширина от</div>
-                                <input data-from-input type="number" class="range-input__input" value="0" min="0" max="4200">
-                                <div class="range-input__delimeter"></div>
-                                <div class="range-input__to">до</div>
-                                <input data-to-input type="number" class="range-input__input" value="4200" min="0" max="4200">
-                                <div class="range-input__unit">мм</div>
-                            </div>
-                            <div class="range-input">
-                                <div class="range-input__name">Высота от</div>
-                                <input data-from-input type="number" class="range-input__input" value="0" min="0" max="4200">
-                                <div class="range-input__delimeter"></div>
-                                <div class="range-input__to">до</div>
-                                <input data-to-input type="number" class="range-input__input" value="4200" min="0" max="4200">
-                                <div class="range-input__unit">мм</div>
-                            </div>
-                        </div>
-                        <div class="products-filter__submit-row">
-                            <div class="products-filter__radios">
-                                <label class="custom-radio">
-                                    <input type="checkbox" class="custom-radio__input">
-                                    <span class="custom-radio__radio"></span>
-                                    <span class="custom-radio__label">В наличии</span>
-                                </label>
-                                <label class="custom-radio">
-                                    <input type="checkbox" class="custom-radio__input">
-                                    <span class="custom-radio__radio"></span>
-                                    <span class="custom-radio__label">Новый товар</span>
-                                </label>
-                            </div>
-                            <div>
-                                <a href="" class="products-filter__reset btn btn--inline btn--transparent-dark btn--pad29">Сбросить</a>
-                                <button class="products-filter__submit btn btn--inline btn--main-dark btn--pad29">Применить фильтр</button>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <div class="catalog-sort" data-sort-container>
-                <p class="catalog-sort__title">Сортировка:</p>
-                <div class="sort-option asc" data-sort-option data-current-order="DESC" data-order-by="price">
-                    <div class="sort-option__graph">
-                        <div class="sort-option__graph-col"></div>
-                        <div class="sort-option__graph-col"></div>
-                        <div class="sort-option__graph-col"></div>
-                        <div class="sort-option__graph-col"></div>
-                    </div>
-                    По цене
-                </div>
-                <div class="sort-option active" data-sort-option data-order-by="popularity" data-default-order="DSC">По полулярности</div>
-            </div>
-            <div class="products-page-grid products-grid">
+            <div class="search__products products-grid">
 <!-- start product-card.html-->
 <a href="./product.html" class="product-card">
     <span class="product-card__top">
@@ -266,51 +203,6 @@
     </span>
     <span class="product-card__bottom">
         <span class="product-card__name">Панно «Кони в горах»</span>
-        <span class="product-card__size">1,5 х 600 х 400 мм</span>
-        <span class="product-card__price-row">
-            <span class="product-card__price">10 000 ₽</span>
-        </span>
-        <span class="btn btn--main">В корзину</span>
-    </span>
-</a>
-<!-- end product-card.html-->
-<!-- start product-card.html-->
-<a href="./product.html" class="product-card">
-    <span class="product-card__top">
-        <img src="./static/images/product2.jpg" alt="" class="product-card__img">
-    </span>
-    <span class="product-card__bottom">
-        <span class="product-card__name">Цветочница</span>
-        <span class="product-card__size">1,5 х 600 х 400 мм</span>
-        <span class="product-card__price-row">
-            <span class="product-card__price">10 000 ₽</span>
-        </span>
-        <span class="btn btn--main">В корзину</span>
-    </span>
-</a>
-<!-- end product-card.html-->
-<!-- start product-card.html-->
-<a href="./product.html" class="product-card">
-    <span class="product-card__top">
-        <img src="./static/images/product3.jpg" alt="" class="product-card__img">
-    </span>
-    <span class="product-card__bottom">
-        <span class="product-card__name">Декоративные элементы для лестниц, заборов, перегородок и др.</span>
-        <span class="product-card__size">1,5 х 600 х 400 мм</span>
-        <span class="product-card__price-row">
-            <span class="product-card__price">10 000 ₽</span>
-        </span>
-        <span class="btn btn--main">В корзину</span>
-    </span>
-</a>
-<!-- end product-card.html-->
-<!-- start product-card.html-->
-<a href="./product.html" class="product-card">
-    <span class="product-card__top">
-        <img src="./static/images/product4.jpg" alt="" class="product-card__img">
-    </span>
-    <span class="product-card__bottom">
-        <span class="product-card__name">Очаг для костра «Лес»</span>
         <span class="product-card__size">1,5 х 600 х 400 мм</span>
         <span class="product-card__price-row">
             <span class="product-card__price">10 000 ₽</span>
@@ -379,25 +271,51 @@
     </span>
 </a>
 <!-- end product-card.html-->
-            </div>
-            <div class="pagination">
-                <a href="/" class="pagination__page arrow prev">
-                    <svg viewBox="0 0 9 5">
-                        <use href='./static/images/sprite.svg#arr'/>
-                    </svg>
-                </a>
-                <span class="pagination__page current">1</span>
-                <a href="/" class="pagination__page">2</a>
-                <a href="/" class="pagination__page">3</a>
-                <a href="/" class="pagination__page">...</a>
-                <a href="/" class="pagination__page">8</a>
-                <a href="/" class="pagination__page">9</a>
-                <a href="/" class="pagination__page">10</a>
-                <a href="/" class="pagination__page arrow next">
-                    <svg viewBox="0 0 9 5">
-                        <use href='./static/images/sprite.svg#arr'/>
-                    </svg>
-                </a>
+<!-- start product-card.html-->
+<a href="./product.html" class="product-card">
+    <span class="product-card__top">
+        <img src="./static/images/product2.jpg" alt="" class="product-card__img">
+    </span>
+    <span class="product-card__bottom">
+        <span class="product-card__name">Цветочница</span>
+        <span class="product-card__size">1,5 х 600 х 400 мм</span>
+        <span class="product-card__price-row">
+            <span class="product-card__price">10 000 ₽</span>
+        </span>
+        <span class="btn btn--main">В корзину</span>
+    </span>
+</a>
+<!-- end product-card.html-->
+<!-- start product-card.html-->
+<a href="./product.html" class="product-card">
+    <span class="product-card__top">
+        <img src="./static/images/product3.jpg" alt="" class="product-card__img">
+    </span>
+    <span class="product-card__bottom">
+        <span class="product-card__name">Декоративные элементы для лестниц, заборов, перегородок и др.</span>
+        <span class="product-card__size">1,5 х 600 х 400 мм</span>
+        <span class="product-card__price-row">
+            <span class="product-card__price">10 000 ₽</span>
+        </span>
+        <span class="btn btn--main">В корзину</span>
+    </span>
+</a>
+<!-- end product-card.html-->
+<!-- start product-card.html-->
+<a href="./product.html" class="product-card">
+    <span class="product-card__top">
+        <img src="./static/images/product4.jpg" alt="" class="product-card__img">
+    </span>
+    <span class="product-card__bottom">
+        <span class="product-card__name">Очаг для костра «Лес»</span>
+        <span class="product-card__size">1,5 х 600 х 400 мм</span>
+        <span class="product-card__price-row">
+            <span class="product-card__price">10 000 ₽</span>
+        </span>
+        <span class="btn btn--main">В корзину</span>
+    </span>
+</a>
+<!-- end product-card.html-->
             </div>
         </div>
     </div>
