--- a/src/html/product.html
+++ b/src/html/product.html
@@ -1,5 +1,5 @@
 @include ./parts/header.html
-<div class="page">
+<div class="page" id="product-page" data-id="11">
     @include ./parts/page-bg.html
     <div class="container">
         @include ./parts/breadcrumbs.html
@@ -84,31 +84,31 @@
                             </div>
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <img class="product-main-slider__img" src="./static/images/slider-img.jpg" alt="">
+                                    <img class="product-main-slider__img swiper-lazy" data-src="./static/images/slider-img.jpg" alt="">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img class="product-main-slider__img" src="./static/images/form-section-img.jpg" alt="">
+                                    <img class="product-main-slider__img swiper-lazy" data-src="./static/images/form-section-img.jpg" alt="">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img class="product-main-slider__img" src="./static/images/hand-img.jpg" alt="">
+                                    <img class="product-main-slider__img swiper-lazy" data-src="./static/images/hand-img.jpg" alt="">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img class="product-main-slider__img" src="./static/images/main-pic.png" alt="">
+                                    <img class="product-main-slider__img swiper-lazy" data-src="./static/images/main-pic.png" alt="">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img class="product-main-slider__img" src="./static/images/imgs-group.png" alt="">
+                                    <img class="product-main-slider__img swiper-lazy" data-src="./static/images/imgs-group.png" alt="">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img class="product-main-slider__img" src="./static/images/imgs-group.png" alt="">
+                                    <img class="product-main-slider__img swiper-lazy" data-src="./static/images/imgs-group.png" alt="">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img class="product-main-slider__img" src="./static/images/service-pic1.jpg" alt="">
+                                    <img class="product-main-slider__img swiper-lazy" data-src="./static/images/service-pic1.jpg" alt="">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img class="product-main-slider__img" src="./static/images/service-pic2.jpg" alt="">
+                                    <img class="product-main-slider__img swiper-lazy" data-src="./static/images/service-pic2.jpg" alt="">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img class="product-main-slider__img" src="./static/images/service-pic3.jpg" alt="">
+                                    <img class="product-main-slider__img swiper-lazy" data-src="./static/images/service-pic3.jpg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -213,6 +213,39 @@
                     </div>
                 </div>
             </section>
+        </div>
+    </div>
+</div>
+<div class="modal modal--default-animation" id="modal-order" data-micromodal-close="">
+    <div class="modal-order__overlay modal__overlay">
+        <div class="modal__container modal__default-container">
+            <div class="modal__close" data-micromodal-close>
+                <svg viewBox="0 0 17 17">
+                    <use href='./static/images/sprite.svg#close'/>
+                </svg>
+            </div>
+            <p class="section-title calc-form__title">Заказать товар</p>
+            <p class="calc-form__text">Оставьте заявку на сайте, наши менеджеры свяжутся с вами, ответят на возникшие вопросы</p>
+            <form class="calc-form__form" data-feedback-form>
+                <input type="hidden" name="product-name" value="Декоративные элементы для лестниц, заборов, перегородок и др.">
+                <input type="hidden" name="product-articul" value="23821382138">
+                <div class="form-elem">
+                    <input type="text" class="form-text-input" placeholder="Имя">
+                    <p class="form-input-placeholder">Имя</p>
+                </div>
+                <div class="form-elem">
+                    <input type="tel" class="form-text-input" placeholder="Телефон">
+                    <p class="form-input-placeholder">Телефон</p>
+                </div>
+                <div class="calc-form__submit-row">
+                    <button data-submit-btn type="submit" class="calc-form__submit btn btn--main btn--pad60">
+                        Отправить заявку
+                    </button>
+                    <p class="personal calc-form__personal">
+                        Нажимая кнопку, вы соглашаетесь <a href="/" class="personal__link">на&nbsp;обработку персональных данных</a>
+                    </p>
+                </div>
+            </form>
         </div>
     </div>
 </div>
