--- a/src/html/catalog-category.html
+++ b/src/html/catalog-category.html
@@ -7,15 +7,17 @@
     <div class="page__content">
         <div class="container">
             <h1 class="catalog-category__title page-title">Каталог</h1>
-            <div class="catalog-search-wrap">
+            <form method="GET" action="./search.html" class="catalog-search-wrap">
                 <div class="form-elem catalog-search">
                     <input name="search" type="text" class="form-text-input" placeholder="Поиск">
                     <p class="form-input-placeholder">Поиск</p>
-                    <svg viewBox="0 0 22 22">
-                        <use href='./static/images/sprite.svg#search'/>
-                    </svg>
+                    <button class="catalog-search__submit">
+                        <svg viewBox="0 0 22 22">
+                            <use href='./static/images/sprite.svg#search'/>
+                        </svg>
+                    </button>
                 </div>
-            </div>
+            </form>
             <div class="category-filter">
                 <a href="/" class="active">Шкафы бухгалтерские</a>
                 <a href="/" class="">Шкафы бухгалтерские</a>
